JETcompiler/Tests/bad/bad001.myout
Parsing error: token "/*" ends unexpectedly in line 0
